2007-05-22  Brian Bidulock  <bidulock@openss7.org>

	* NEWS: updates for release
	* src/include/sys/lfs/ddi.h: correct time calculation
	* src/include/sys/sun/stream.h: correct extern (compiler warning)

2007-05-18  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release

	* debian/strcompat-core.preinst.in: corrected array subscript syntax error
	* debian/strcompat-core.prerm.in: corrected array subscript syntax error
	* strcompat.spec.in: corrected array subscript syntax error

2007-05-18  Brian Bidulock  <bidulock@openss7.org>

	* src/kernel/os7compat.c:
	  - do not delete messages
	  - handle mi_timer messages correctly

	* doc/man/man9/mi_timer_cond.9.man: added new manpages
	* doc/man/man9/mi_timer_requeue.9.man: added new manpages
	* doc/man/man9/mi_timer_running.9.man: added new manpages
	* doc/man/man9/mi_timer_ticks.9.man: added new manpages

	* doc/man/Makefile.am: update for release
	* doc/man/man9/mi_timer.9.man: update for release
	* doc/man/man9/mi_timer_move.9.man: update for release
	* doc/man/man9/mi_timer_remain.9.man: update for release
	* doc/manual/news.texi: update for release

2007-05-17  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/man9/mi_mpprintf.9.man: documentation update
	* doc/man/man9/mi_timer_cancel.9.man: documentation update
	* doc/man/man9/mi_timer_q_switch.9.man: documentation update
	* doc/man/man9/mi_timer_remain.9.man: documentation update
	* doc/man/man9/mi_timer_valid.9.man: documentation update
	* src/include/sys/os7/bufq.h: made unlocked access to head and tail volatile

	* src/include/sys/mac/stream.h: added new timer functions
	* src/include/sys/mps/stream.h: added new timer functions
	* src/include/sys/sun/stream.h: added new timer functions

	* src/kernel/mpscompat.c:
	  - inline documentation updates
	  - heavy rework of mi_timer functions
