@@ -1,7 +1,7 @@
 @c -*- texinfo -*- vim: ft=texinfo
 @c =========================================================================
 @c
-@c @(#) $Id: news.texi,v 0.9.2.28 2007/05/18 21:17:58 brian Exp $
+@c @(#) $Id: news.texi,v 0.9.2.29 2007/06/20 05:39:08 brian Exp $
 @c
 @c =========================================================================
 @c
@@ -53,7 +53,7 @@
 @c 
 @c =========================================================================
 @c
-@c Last Modified $Date: 2007/05/18 21:17:58 $ by $Author: brian $
+@c Last Modified $Date: 2007/06/20 05:39:08 $ by $Author: brian $
 @c
 @c =========================================================================
 
@@ -95,6 +95,9 @@ Major features since the last public release are as follows:
 
 @itemize -
 @item
+Support build on Fedora 7 and 2.6.21 kernel.
+
+@item
 Rework of @manref{mi_timer(9)} based timers with the addition of several new
 helper functions.  Enhancements and minor corrections to some OpenSS7 specific
 compatibility functions.
@@ -103,7 +106,7 @@ compatibility functions.
 Support build on CentOS 5.0 (RHEL5).
 
 @item
-Supports build on Ubuntu 7.04.
+Support build on Ubuntu 7.04.
 
 @item
 Updated to gettext 0.16.1.
